# Kindact

./: .gitignore  .kilocodemodes  AGENTS.md  Hypercerts_Collaboration_Strategy.md  Kindact_Blog_Post.md  Kindact_Blog_Post_3min.md  Kindact_Economics.md  Kindact_Economics_Deep_Dive copy.md  Kindact_Economics_Deep_Dive.md  Kindact_Local_Currencies_Analysis.md  Kindact_Local_vs_Global_Analysis.md  Kindact_Main.md  Kindact_PRD.md  Kindact_Slack_Post.md  Kosmos_Commons_Finance_Kindact_Analysis.md  Leanne_Feedback_Tracker.md  RCF_currency-design-distilled.md  RCF_currency-design-slack.md  Update1.md
.antigravitycli/: e7dee8ce-f6cd-4eb7-8b1d-c23513ac6709.json
.jjconflict-base-0/: Kindact 22a79a074239806c9135de383cc596ad.md  Will_Ruddick.md
.jjconflict-side-0/: Kindact_Abuse_Cases.md  Kindact_Economics_Deep_Dive copy.md  Kindact_Main.md  Kindact_PRD.md  Leanne_Feedback_Tracker.md  Open_Questions_and_Ideas.md
.jjconflict-side-1/: Kindact_Disagreements_Meta_Governance_Deep_Dive.md  (+4 more)
holochain/kindact-hc/: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
holochain/kindact-hc/.github/workflows/: test.yaml
holochain/kindact-hc/crates/kindact_base/: Cargo.toml
holochain/kindact-hc/crates/kindact_base/src/: lib.rs
holochain/kindact-hc/dnas/global_registry/workdir/: dna.yaml
holochain/kindact-hc/dnas/global_registry/zomes/coordinator/registry/: Cargo.toml
holochain/kindact-hc/dnas/global_registry/zomes/coordinator/registry/src/: lib.rs
holochain/kindact-hc/dnas/global_registry/zomes/coordinator/registry/tests/: cell_directory.rs  persistence.rs
holochain/kindact-hc/dnas/global_registry/zomes/integrity/registry_integrity/src/: lib.rs
holochain/kindact-hc/dnas/housing/workdir/: dna.yaml
holochain/kindact-hc/dnas/housing/zomes/coordinator/housing/: Cargo.toml
holochain/kindact-hc/dnas/housing/zomes/coordinator/housing/src/: lib.rs
holochain/kindact-hc/dnas/housing/zomes/integrity/housing_integrity/: Cargo.toml
holochain/kindact-hc/dnas/housing/zomes/integrity/housing_integrity/src/: lib.rs
holochain/kindact-hc/dnas/manhattan_windturbine/workdir/: dna.yaml
holochain/kindact-hc/dnas/manhattan_windturbine/zomes/coordinator/wind_turbine/: Cargo.toml
holochain/kindact-hc/dnas/manhattan_windturbine/zomes/coordinator/wind_turbine/src/: lib.rs
holochain/kindact-hc/dnas/manhattan_windturbine/zomes/integrity/wind_turbine_integrity/: Cargo.toml
holochain/kindact-hc/dnas/manhattan_windturbine/zomes/integrity/wind_turbine_integrity/src/: lib.rs
holochain/kindact-hc/ui/: index.html  package.json
holochain/kindact-hc/ui/src/: holochain-app.ts  index.css
holochain/kindact-hc/ui/src/global_registry/registry/: types.ts
holochain/kindact-hc/ui/src/housing/housing/: types.ts
holochain/kindact-hc/ui/src/manhattan_windturbine/wind_turbine/: types.ts
holochain/kindact-hc/workdir/: happ.yaml  web-happ.yaml
kindact-pp/dna/v1.0/zomes/issues/coordinator/: Cargo.toml
kindact-pp/dna/v1.0/zomes/issues/coordinator/src/: lib.rs
kindact-pp/dna/v1.1/zomes/polls/coordinator/: Cargo.toml
kindact-pp/dna/v1.3/zomes/polls/coordinator/: Cargo.toml
kindact-pp/dna/v1.3/zomes/polls/coordinator/src/: lib.rs
kindact-pp/dna/zomes/polls/coordinator/: Cargo.toml
simulation/: .gitignore  README.md  app.py  pyproject.toml  run.sh
simulation/agent_configs/: 69NoPurchases.json  default.json  realistic_adoption.json
simulation/docs/: events-and-agent-behaviour.md
simulation/docs/superpowers/plans/: 2026-03-27-economic-simulation.md
simulation/specs/001-economic-simulation/: README.md
simulation/specs/002-merchant-acceptance-dynamics/: README.md
simulation/specs/005-fix-access-fees/: README.md
simulation/specs/008-perception-shocks/: README.md
simulation/specs/009-smarter-speculators/: README.md
simulation/specs/010-local-communities-note/: README.md
simulation/specs/011-fix-supply-and-monte-carlo-bugs/: README.md
simulation/src/kindact_sim/: __init__.py  agent_config.py  confidence.py  config.py  mechanisms.py  policies.py  run.py  scenarios.py  state.py  types.py
simulation/src/kindact_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
simulation/tests/: test_agent_config.py  test_confidence.py  test_integration.py  test_mechanisms.py  test_policies.py  test_runs.py  test_scenarios.py
(+515 files in other folders)
