[project]
name = "kindact-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cadCAD>=0.5.3",
    "streamlit>=1.30",
    "plotly>=5.18",
    "numpy>=1.26",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
