[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.7.1"
hdk = "=0.6.1"
holochain_serialized_bytes = "*"
serde = "1.0"
tokio = "1.49"

[workspace.dependencies.holochain]
default-features = false
version = "0.6.1"

[workspace.dependencies.registry]
path = "dnas/global_registry/zomes/coordinator/registry"

[workspace.dependencies.registry_integrity]
path = "dnas/global_registry/zomes/integrity/registry_integrity"
