[package]
name = "issues_coordinator"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "issues_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
issues_integrity = { path = "../integrity" }
