[package]
name = "polls_coordinator_v1_1"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "polls_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
polls_integrity = { path = "../integrity", package = "polls_integrity_v1_1" }
