[package]
name = "polls_coordinator_v1_3"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "polls_coordinator"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
polls_integrity = { path = "../integrity", package = "polls_integrity_v1_3" }
